--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,17 +14,17 @@ Description: Pacote desenvolvido por mulheres latinas para download
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Imports:
     dplyr,
+    tidyr,
     httr,
+    purrr,
+    readr,
     jsonlite,
     magrittr,
-    plyr,
-    rlang,
-    rvest,
-    stringr, 
-    xml2
+    stringr,
+    lubridate
 Suggests: 
     brazilmaps,
     devtools,
