--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,30 +10,32 @@ Authors@R: c(
     )
 Maintainer: Sara R Mortara <saramortara@gmail.com>
 Description: Pacote desenvolvido por mulheres latinas para download 
-    dos casos registrados de coronavírus no Brasil
+    dos casos registrados de coronavírus no Brasil.
 License: GPL (>= 3)
 URL: https://liibre.github.io/coronabr/, https://github.com/liibre/coronabr
 BugReports: https://github.com/liibre/coronabr/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.0.2
+RoxygenNote: 6.1.1
 Imports:
     dplyr,
     httr,
     jsonlite,
     magrittr,
     plyr,
+    readr,
     rlang,
     rvest,
-    stringr, 
+    stringr,
     xml2
 Suggests: 
     brazilmaps,
     devtools,
+    gganimate,
     ggplot2,
     knitr,
     rgdal,
-    rmarkdown,
     sf,
     tmap
-VignetteBuilder: knitr
+VignetteBuilder: 
+    knitr
