--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,8 @@ import(magrittr)
 import(plyr)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate_if)
-importFrom(httr,timeout)
 importFrom(jsonlite,fromJSON)
 importFrom(rlang,.data)
-importFrom(rvest,html_nodes)
-importFrom(rvest,html_session)
+importFrom(rvest,html_text)
 importFrom(stringr,str_split)
 importFrom(utils,write.csv)
