--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Authors@R: c(
     person("Sara", "Mortara", email = "saramortara@gmail.com", 
     role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6221-7537")),
     person("Andrea", "Sánchez-Tapia", email = "andreasancheztapia@gmail.com", 
-    role = c("aut"), comment = c(ORCID = "0000-0002-3521-4338"))
+    role = c("aut"), comment = c(ORCID = "0000-0002-3521-4338")), 
+    person("Karlo", "Guidoni Martins", email = "kguidonimartins@gmail.com",
+    role = c("aut"), comment = c(ORCID = "0000-0002-8458-8467"))
     )
 Maintainer: Sara R Mortara <saramortara@gmail.com>
 Description: Pacote desenvolvido por mulheres latinas para download 
