--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ URL: https://liibre.github.io/coronabr/, https://github.com/liibre/coronabr
 BugReports: https://github.com/liibre/coronabr/issues
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0
 Imports:
     dplyr,
     httr,
@@ -29,7 +29,10 @@ Imports:
     rlang,
     rvest,
     stringr,
-    xml2
+    xml2,
+    fs,
+    glue,
+    janitor
 Suggests: 
     brazilmaps,
     devtools,
