add map and gif functions for output of get_corona_br()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Imports:
+    brazilmaps,
     dplyr,
     fs,
     ggplot2,
@@ -32,15 +33,14 @@ Imports:
     readr,
     rlang,
     rvest,
+    sf,
     stringr,
+    tmap,
     xml2
 Suggests: 
-    brazilmaps,
     devtools,
     gganimate,
     knitr,
-    rgdal,
-    sf,
-    tmap
+    rgdal
 VignetteBuilder: 
     knitr
