--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,12 @@
 
 export(get_corona)
 export(get_corona_jhu)
+export(gif_corona_br)
+export(map_corona_br)
 export(plot_corona_br)
 import(magrittr)
 import(plyr)
+importFrom(brazilmaps,get_brmap)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate_if)
@@ -17,5 +20,6 @@ importFrom(readr,read_csv)
 importFrom(readr,write_csv)
 importFrom(rlang,.data)
 importFrom(rvest,html_text)
+importFrom(sf,st_as_sf)
 importFrom(stringr,str_split)
 importFrom(utils,write.csv)
