small changes in documentation and args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,5 @@ importFrom(rlang,.data)
 importFrom(rvest,html_text)
 importFrom(sf,st_as_sf)
 importFrom(stringr,str_split)
+importFrom(utils,read.csv)
 importFrom(utils,write.csv)
