adds function to plot ufs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,18 @@ export(get_corona_jhu)
 export(gif_corona_br)
 export(map_corona_br)
 export(plot_corona_br)
+export(plot_uf)
+import(ggplot2)
 import(magrittr)
 import(plyr)
 importFrom(brazilmaps,get_brmap)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,summarise_at)
+importFrom(dplyr,ungroup)
 importFrom(fs,dir_create)
 importFrom(glue,glue)
 importFrom(janitor,clean_names)
@@ -23,6 +29,7 @@ importFrom(readr,write_csv)
 importFrom(rlang,.data)
 importFrom(rvest,html_text)
 importFrom(sf,st_as_sf)
+importFrom(stats,reorder)
 importFrom(stringr,str_split)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
