--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,3 +18,6 @@ navbar:
       menu:
       - text: Visualização dos casos registrados de coronavírus no Brasil
         href: articles/graficos.html
+    news:
+      text: sobre
+      href: about.html
