--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,11 @@ import(plyr)
 importFrom(brazilmaps,get_brmap)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
-importFrom(dplyr,summarise_at)
-importFrom(dplyr,ungroup)
 importFrom(fs,dir_create)
+importFrom(gganimate,anim_save)
+importFrom(gganimate,transition_reveal)
 importFrom(glue,glue)
 importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
@@ -30,6 +29,7 @@ importFrom(rlang,.data)
 importFrom(rvest,html_text)
 importFrom(sf,st_as_sf)
 importFrom(stats,reorder)
+importFrom(stats,setNames)
 importFrom(stringr,str_split)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
