resolvendo imports. checks passando. chau gif.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,10 @@ export(format_corona_br)
 export(get_corona)
 export(get_corona_br)
 export(get_corona_jhu)
-export(gif_corona_br)
 export(map_corona_br)
 export(plot_corona_br)
 export(plot_uf)
 import(ggplot2)
-import(magrittr)
-import(plyr)
 importFrom(brazilmaps,get_brmap)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
@@ -22,6 +19,8 @@ importFrom(gganimate,transition_reveal)
 importFrom(glue,glue)
 importFrom(janitor,clean_names)
 importFrom(jsonlite,fromJSON)
+importFrom(magrittr,"%>%")
+importFrom(plyr,.)
 importFrom(plyr,count)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
