--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,8 +16,10 @@ navbar:
     articles:
       text: artigos
       menu:
-      - text: Visualização dos casos registrados de coronavírus no Brasil
+      - text: Visualização dos casos registrados de COVID-19 no Brasil
         href: articles/graficos.html
+      - text: Caos de COVID-19 na América Latina e Caribe
+        href: articles/lac.html
     news:
       text: sobre
       href: about.html
