--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   coronabr: coronabr.html
   graficos: graficos.html
-last_built: 2020-04-01T00:29Z
+  lac: lac.html
+last_built: 2020-04-01T19:23Z
 
