force gifski import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(map_corona_br)
 export(plot_corona_br)
 export(plot_uf)
 import(ggplot2)
+import(gifski)
 importFrom(brazilmaps,get_brmap)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
