adding packages to description for travis

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,24 +24,26 @@ RoxygenNote: 7.1.0
 Imports:
     brazilmaps,
     dplyr,
-    plyr,
     fs,
     ggplot2,
+    gganimate,
+    gifski,
     glue,
     httr,
     janitor,
     jsonlite,
     magrittr,
+    plyr,
     readr,
     rlang,
+    rmarkdown,
     rvest,
     sf,
     stringr,
     tidyr,
     tmap,
-    xml2,
-    gganimate,
-    gifski
+    webshot,
+    xml2
 Suggests: 
     devtools,
     knitr,
