returning github_token

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: r
+  language: r
 
 sudo: false
 
@@ -13,6 +13,7 @@ before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
 deploy:
   provider: script
   script: Rscript -e 'pkgdown::deploy_site_github()'
+  github_token: $GITHUB_TOKEN
   keep_history: true
   skip_cleanup: true
 
