trying w/ code chunck from jenny <3. but don't know what i'm doing

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,18 @@ before_install:
 
 cache: packages
 
-before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
-
-deploy:
-  provider: script
-  script: Rscript -e 'pkgdown::deploy_site_github()'
-  github_token: $GITHUB_TOKEN
-  keep_history: true
-  skip_cleanup: true
+matrix:
+  include:
+  - r: devel
+  - r: release
+    after_success: Rscript -e 'covr::codecov()'
+    before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
+    deploy:
+      provider: script
+      script: Rscript -e 'pkgdown::deploy_site_github()'
+      skip_cleanup: true
+      github_token: $GITHUB_TOKEN
+    keep_history: true
 
 after_success:
   - Rscript -e 'devtools::install()'
