--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,50 @@
-language: r
+# tic documentation: https://docs.ropensci.org/tic/dev/
 
-sudo: false
+# OS ---------------------------------------------------------------------------
+os: linux
+dist: bionic
+
+# meta -------------------------------------------------------------------------
+language: r
+cache:
+  - packages
+  - ccache
+latex: false
+
+# environment variables --------------------------------------------------------
+
+env:
+  global:
+    - MAKEFLAGS="-j 2"
+    # if you use bookdown or blogdown, replace "PKGDOWN" by the respective
+    # capitalized term. This also might need to be done in tic.R
+    - BUILD_PKGDOWN=true
+
+# Stages -----------------------------------------------------------------------
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get -y install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev libgdal-dev bwidget libgdal-dev libgdal1-dev libgeos-dev libgeos++-dev libgsl0-dev libproj-dev libspatialite-dev netcdf-bin libgmp3-dev libudunits2-dev cargo
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then brew install ccache; fi
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then export PATH="/usr/local/opt/ccache/libexec:$PATH"; fi
+  - echo -e "options(Ncpus = 8, repos = structure(c(CRAN = 'https://cloud.r-project.org/')))" > $HOME/.Rprofile
+  - mkdir -p $HOME/.R && echo -e 'CXX_STD = CXX14\n\nCC=ccache gcc -std=gnu99\nCXX=ccache g++\nCXX11=ccache g++ -std=gnu99\nCXX14=ccache g++ -std=gnu99\nC11=ccache g++\nC14=ccache g++\nFC=ccache gfortran\nF77=ccache gfortran' > $HOME/.R/Makevars
+  - mkdir -p $HOME/.ccache && echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
+  - R -q -e 'if (!requireNamespace("remotes")) install.packages("remotes")'
+  - R -q -e 'if (getRversion() < "3.2" && !requireNamespace("curl")) install.packages("curl")'
+  - R -q -e 'remotes::install_github("ropensci/tic", upgrade = "always"); print(tic::dsl_load()); tic::prepare_all_stages()'
+  - R -q -e 'tic::before_install()'
+install:
+  - R -q -e 'tic::install()'
+before_script: R -q -e 'tic::before_script()'
+script: R -q -e 'tic::script()'
+after_success: R -q -e 'tic::after_success()'
+after_failure: R -q -e 'tic::after_failure()'
+before_deploy: R -q -e 'tic::before_deploy()'
+deploy:
+  provider: script
+  script: R -q -e 'tic::deploy()'
+  on:
+    all_branches: true
+after_deploy: R -q -e 'tic::after_deploy()'
+after_script: R -q -e 'tic::after_script()'
 
-cache: packages
-
-matrix:
-  include:
-  - r: devel
-  - r: release
-    before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
-    deploy:
-      provider: script
-      script: Rscript -e 'pkgdown::deploy_site_github()'
-      skip_cleanup: true
-      github_token: $GITHUB_TOKEN
-      keep_history: true
-
-
-r_packages:
-  - brazilmaps
-  - dplyr
-  - plyr
-  - fs
-  - ggplot2
-  - glue
-  - httr
-  - janitor
-  - jsonlite
-  - magrittr
-  - readr
-  - rlang
-  - rvest
-  - sf
-  - stringr
-  - tidyr
-  - tmap
-  - xml2
-  - gganimate
-  - devtools
-  - knitr
-  - rgdal
-  - gifski
-  - pkgdown
-  - webshot
-  - rmarkdown
-  - remotes
-
-os:
-  - linux
+# Custom user code -------------------------------------------------------------
