add local-dir on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
       skip_cleanup: true
       github_token: $GITHUB_TOKEN
       keep_history: true
+      local-dir: docs
       on:
         branch: master
 
