--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: coronabr
 Type: Package
-Title: Download de dados do coronavírus
+Title: Download de dados de COVID-19 no Brasil
 Version: 0.1.0
 Authors@R: c(
     person("Sara", "Mortara", email = "saramortara@gmail.com", 
@@ -14,7 +14,7 @@ Authors@R: c(
     )
 Maintainer: Sara R Mortara <saramortara@gmail.com>
 Description: Pacote desenvolvido por latinecs para download 
-    dos casos registrados de coronavírus no Brasil.
+    dos casos registrados de COVID-19 no Brasil.
 License: GPL (>= 3)
 URL: https://liibre.github.io/coronabr/, https://github.com/liibre/coronabr
 BugReports: https://github.com/liibre/coronabr/issues
