--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,5 +5,6 @@ articles:
   coronabr: coronabr.html
   graficos: graficos.html
   lac: lac.html
-last_built: 2020-04-01T20:51Z
+  lac_es: lac_es.html
+last_built: 2020-04-03T20:14Z
 
