--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,5 +6,8 @@ articles:
   graficos: graficos.html
   lac: lac.html
   lac_es: lac_es.html
-last_built: 2020-04-04T20:16Z
+last_built: 2020-04-04T22:07Z
+urls:
+  reference: https://liibre.github.io/coronabr/reference
+  article: https://liibre.github.io/coronabr/articles
 
