--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -6,7 +6,8 @@ articles:
   graficos: graficos.html
   lac: lac.html
   lac_es: lac_es.html
-last_built: 2020-04-07T16:08Z
+  minsaude: minsaude.html
+last_built: 2020-04-07T22:40Z
 urls:
   reference: https://liibre.github.io/coronabr/reference
   article: https://liibre.github.io/coronabr/articles
