add missing packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(plyr,.)
 importFrom(plyr,count)
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
+importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(sf,st_as_sf)
 importFrom(stats,reorder)
