--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,9 @@ BugReports: https://github.com/liibre/coronabr/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Remotes:
+    github::r-spatial/lwgeom,
+    github::rpradosiqueira/brazilmaps
 Imports:
     brazilmaps,
     dplyr,
