update travis build config

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,10 @@ matrix:
 after_success:
   - Rscript -e 'devtools::install()'
 
+r_github_packages:
+  - r-spatial/lwgeom
+  - rpradosiqueira/brazilmaps
+
 r_packages:
   - brazilmaps
   - dplyr
