--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,8 +22,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Remotes:
-    github::r-spatial/lwgeom,
-    github::rpradosiqueira/brazilmaps
+    r-spatial/lwgeom,
+    rpradosiqueira/brazilmaps
 Imports:
     brazilmaps,
     dplyr,
