WIP plot_uf e plot_uf2 na vinheta graficos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(get_corona_minsaude)
 export(plot_corona_br)
 export(plot_corona_minsaude)
 export(plot_uf)
+export(plot_uf2)
 import(ggplot2)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,glimpse)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
