--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(get_corona_minsaude)
 export(plot_corona_br)
 export(plot_corona_minsaude)
 export(plot_uf)
-export(plot_uf2)
 import(ggplot2)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
@@ -26,6 +25,7 @@ importFrom(readr,read_csv)
 importFrom(readr,write_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
+importFrom(stats,na.omit)
 importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
