updates Brasil I/O, adds SAVE, checks minsaude

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(dplyr,mutate_if)
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
 importFrom(plyr,count)
+importFrom(readr,read_csv)
 importFrom(readxl,read_excel)
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
