using openxlsx::read.xlsx instead of readxl::read_excel - faster!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,12 +30,12 @@ Imports:
     httr,
     jsonlite,
     magrittr,
+    openxlsx,
     plyr,
     readr,
     rlang,
     rvest,
     stringr,
-    readxl,
     tidyr,
     xml2
 Suggests: 
