--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,13 +2,13 @@ pandoc: 2.3.1
 pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
+  graficos: articles/graficos.html
   lac: articles/lac.html
   lac_es: articles/lac_es.html
   mapas_br: articles/mapas_br.html
+  minsaude: articles/minsaude.html
   coronabr: coronabr.html
-  graficos: graficos.html
-  minsaude: minsaude.html
-last_built: 2020-06-30T02:16Z
+last_built: 2020-06-30T22:09Z
 urls:
   reference: https://liibre.github.io/coronabr/reference
   article: https://liibre.github.io/coronabr/articles
