checks OK + updated maps w breaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,4 +23,6 @@ importFrom(stats,na.omit)
 importFrom(stats,reorder)
 importFrom(stats,setNames)
 importFrom(utils,read.csv)
+importFrom(utils,unzip)
 importFrom(utils,write.csv)
+importFrom(vroom,vroom)
