--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,14 +1,14 @@
 pandoc: '2.10'
-pkgdown: 1.5.1
+pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  graficos: articles/graficos.html
-  lac: articles/lac.html
-  lac_es: articles/lac_es.html
-  mapas_br: articles/mapas_br.html
-  minsaude: articles/minsaude.html
+  articles/graficos: graficos.html
+  articles/lac: lac.html
+  articles/lac_es: lac_es.html
+  articles/mapas_br: mapas_br.html
+  articles/minsaude: minsaude.html
   coronabr: coronabr.html
-last_built: 2020-08-12T17:54Z
+last_built: 2020-10-27T17:50Z
 urls:
   reference: https://liibre.github.io/coronabr/reference
   article: https://liibre.github.io/coronabr/articles
