--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 
 before_install:
   - sudo apt-get update && sudo apt-get --reinstall install -qq language-pack-gnome-pt language-pack-pt-base
-  - sudo apt-get -y install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev libgdal-dev bwidget libgdal-dev libgdal1-dev libgeos-dev libgeos++-dev libgsl0-dev libproj-dev libspatialite-dev netcdf-bin libgmp3-dev libudunits2-dev cargo
+  - sudo apt-get -y install build-essential libcurl4-gnutls-dev libxml2-dev libssl-dev libgdal-dev bwidget libgdal-dev libgdal1-dev libgeos-dev libgeos++-dev libgsl0-dev libproj-dev libspatialite-dev netcdf-bin libgmp3-dev libudunits2-dev cargo libgit2-dev
 
 cache: packages
 
